--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,58 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Employee
+public class Employee {
+	private String name;
+	double salary;
+	private int workHours, hireYear;
+	
+	Employee(int hireYear, int workHours, double salary, String name) {
+		this.name = name;
+		this.salary = salary;
+		this.workHours = workHours;
+		this.salary = salary;
+	
+		
+	}
+	
+	public double tax() {
+		
+		if (this.salary >= 1000) {
+			return salary * 0.03;
+		
+	}
+		return 0.0;
+}
+	
+	public double bonus() {
+		int exstraHours = this.workHours - 40;
+		if(exstraHours > 0) {
+		return 30 * exstraHours;
+	    
+		}
+		return 0.0;
+		
+	}
+	
+	public double increase() {
+		int year = 2021 - this.hireYear;
+		if(year < 10) {
+			return salary * 0.5;
+		} else if(year >= 10 && year < 20) {
+			return salary * 0.10;
+	    } else {
+	    	return salary * 0.15;
+		}
+	
+	}
+	public void toString(Employee emp) {
+		System.out.println("Tax :" + emp.tax());
+		System.out.println("Bonus :" + emp.bonus());
+		System.out.println("Increase Salary :" + emp.increase());
+		double totalSalary = emp.salary + emp.bonus();
+		System.out.println("Total salary with bonus:" + totalSalary);
+		System.out.println("Total salary with the raise of salary:" + (emp.salary + emp.increase()));
+	
+	}
+	
+}	
+	
+	
